tests/baselines/reference/incompleteObjectLiteral1.errors.txt
==== tests/cases/compiler/incompleteObjectLiteral1.ts (2 errors) ====
    var tt = { aa; }
                 ~
!!! error TS1005: ':' expected.
                   ~
!!! error TS1128: Declaration or statement expected.
    var x = tt;